TEST_PROGRAMS/INVALID/shao_kun_deng/invalid1.min
#using keyword as id

var float : int;

if float then
	1;
endif
